# aimon

./: .gitignore  README.md  quickstart.sh
aimon/: README.md  install-all.sh  start-all.sh  test-all.sh  test_summary.md
aimon/infrastructure/: README.md  docker-compose.yml
aimon/infrastructure/examples/: python_service_example.py
aimon/infrastructure/libraries/python/: setup.py
aimon/infrastructure/libraries/python/aimon_comm/: __init__.py  message_queue.py  service_discovery.py
aimon/infrastructure/monitoring/: prometheus.yml
aimon/infrastructure/monitoring/grafana/dashboards/: dashboard.yml
aimon/infrastructure/scripts/: setup.sh
aimon/infrastructure/tests/: test_infrastructure.py
aimon/modules/activity-db/: README.md  pyproject.toml  requirements.txt  test_basic.py
aimon/modules/activity-db/activity_db/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
aimon/modules/activity-db/activity_db/api/: __init__.py  applications.py  events.py  screenshots.py  sessions.py  summaries.py
aimon/modules/activity-db/activity_db/services/: __init__.py  api_key_service.py  event_service.py
aimon/modules/activity-db/tests/: __init__.py  conftest.py  test_api.py  test_models.py
aimon/modules/activity-parser/: README.md  package-lock.json  package.json
aimon/modules/activity-parser/src/: ActivityParser.ts  config.ts  index.ts  types.ts
aimon/modules/activity-parser/src/analyzers/: QualityAnalyzer.ts
aimon/modules/activity-parser/src/categorizers/: ActivityCategorizer.ts
aimon/modules/activity-parser/src/engines/: RuleEngine.ts
aimon/modules/ai-summarizer/: README.md  package.json
aimon/modules/ai-summarizer/src/: AISummarizer.ts  config.ts  index.ts  types.ts
aimon/modules/context-detector/: README.md  package.json  tsconfig.json
aimon/modules/context-detector/src/: ContextDetector.ts  types.ts
aimon/modules/ime-adapter/: README.md  package-lock.json  package.json
aimon/modules/ime-adapter/src/: ImeAdapter.ts  config.ts  index.ts  types.ts
aimon/modules/input-monitor/: Cargo.toml  README.md  config.toml  test_results.txt
aimon/modules/input-monitor/src/: config.rs  events.rs  lib.rs  main.rs  monitor.rs  output.rs  screenshot.rs
aimon/modules/input-monitor/tests/: integration_tests.rs
aimon/modules/monitor-dashboard/: README.md  package.json  tsconfig.json
aimon/modules/monitor-dashboard/public/: index.html  manifest.json
aimon/modules/monitor-dashboard/src/: App.test.tsx  App.tsx  index.css  index.tsx  setupTests.ts
(+57 files in other folders)
