[package]
name = "input-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Logging
log = "0.4"
env_logger = "0.11"
# Event streaming
futures = "0.3"
# Configuration
toml = "0.8"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21"

# Optional dependencies for full functionality
rdev = { version = "0.5", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
lapin = { version = "2.3", optional = true }
screenshots = { version = "0.8", optional = true }
image = { version = "0.24", optional = true }

[features]
default = []
full = ["rdev", "reqwest", "lapin", "screenshots", "image"]

[dev-dependencies]
mockall = "0.12"